<resources>
    <string name="app_name">SubStandard</string>

    <!-- Used in media notification -->
    <string name="prev_track">Previous</string>
    <string name="next_track">Next</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>

    <!-- Used in Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_settings">Settings</string>
    <string name="navigation_rescan">Rescan Library</string>

    <!-- Used in Main Activity -->
    <string name="nothing_playing_song" translatable="false">-</string>
    <string name="nothing_playing_artist" translatable="false"> </string>

    <!-- Used in Home Fragment -->
    <string name="new_albums_label">New Albums</string>
    <string name="random_albums_label">Random Albums</string>
    <string name="recent_albums_label">Recent Albums</string>
    <string name="fav_albums_label">Favorite Albums</string>

    <!-- Used in Artists fragment -->
    <string name="artists">Artists</string>

    <!-- Used in Artist View fragment -->
    <string name="albums">Albums</string>
    <string name="similar_artists">Similar Artists</string>

    <string name="cover_art_description">Cover art for the album</string>

    <!-- Used in preferences -->
    <string name="settings">Settings</string>
    <string name="pref_server_key" translatable="false">serverAddress</string>
    <string name="pref_server_value">Server Address</string>

    <string name="pref_login_key" translatable="false">login</string>
    <string name="pref_login_value">Login</string>

    <string name="pref_username_key" translatable="false">username</string>
    <string name="pref_username_value">Username</string>

    <string name="pref_auth_token_key" translatable="false">auth</string>
    <string name="pref_salt_key" translatable="false">salt</string>

    <string name="pref_db_initialized_key" translatable="false">db_init</string>
    <string name="pref_user_logged_in_key" translatable="false">login_key</string>

    <!-- Used in media player -->
    <string name="track_time_default" translatable="false">-:--</string>

    <!-- Used in login dialog -->
    <string name="login">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="server_hint">http://server-address</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_server">Server Address</string>
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Login successful!"</string>
    <string name="login_failed">"Login failed \u2014 please try again"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
