<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:id="@+id/media_player_layout" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/mini_media_control_view">

        <com.example.substandard.ui.CoverArtImageView
            android:id="@+id/album_art_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:maxHeight="50dp"
            android:maxWidth="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/transparent"
            tools:srcCompat="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/song_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            tools:text="Song Title"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/nothing_playing_song"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toRightOf="@+id/album_art_view"
            app:layout_constraintTop_toTopOf="@id/album_art_view"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/artist_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Artist Name"
            android:textSize="12sp"
            android:text="@string/nothing_playing_artist"
            android:singleLine="true"
            android:ellipsize="end"
            android:padding="2dp"
            app:layout_constraintLeft_toLeftOf="@id/song_name_view"
            app:layout_constraintTop_toBottomOf="@id/song_name_view"
            app:layout_constraintBottom_toBottomOf="@id/album_art_view"/>

        <ImageButton
            android:id="@+id/play_button"
            style="@style/ExoMediaButton.Play"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/album_art_view"
            app:layout_constraintBottom_toBottomOf="@id/album_art_view"
            tools:src="@drawable/exo_controls_play" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorPrimary"
        android:id="@+id/media_player">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:id="@+id/album_art_large"
            tools:src="@drawable/exo_icon_fullscreen_enter"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/media_player_header"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="top|center"
            android:background="@color/backgroundLight"
            android:visibility="invisible"
            android:alpha="0.7">

            <TextView
                android:id="@+id/song_name_view_media_player"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="end"
                tools:text="Song Name"/>
            <TextView
                android:id="@+id/artist_name_view_media_player"
                app:layout_constraintTop_toBottomOf="@id/song_name_view_media_player"
                app:layout_constraintStart_toStartOf="@id/song_name_view_media_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="12sp"
                android:singleLine="true"
                android:ellipsize="end"
                tools:text="Artist name"/>

            <ImageButton
                android:id="@+id/playlist_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_queue_music_black_24dp"
                android:background="@android:color/transparent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_gravity="bottom|center"
            android:background="@color/backgroundLight"
            android:alpha="0.7">
            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/media_player_play_pause"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/seek_bar"
                app:layout_constraintStart_toStartOf="@id/seek_bar"
                android:textSize="12sp"
                android:text="@string/track_time_default"
                tools:text="0:00"/>
            <TextView
                android:id="@+id/track_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/seek_bar"
                app:layout_constraintEnd_toEndOf="@id/seek_bar"
                android:textSize="12sp"
                android:text="@string/track_time_default"
                tools:text="3:53"/>
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="@id/media_player_play_pause"
                app:layout_constraintEnd_toStartOf="@id/media_player_play_pause"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/media_player_prev"
                android:src="@drawable/exo_controls_previous"
                android:background="@android:color/transparent"/>
            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/media_player_play_pause"
                android:src="@drawable/exo_controls_play"
                android:background="@android:color/transparent"/>
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/media_player_next"
                android:src="@drawable/exo_controls_next"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/media_player_play_pause"
                app:layout_constraintStart_toEndOf="@id/media_player_play_pause"
                android:background="@android:color/transparent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</LinearLayout>